--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -13,7 +13,7 @@
         android:layout_width="310dp"
         android:layout_height="84dp"
         android:fontFamily="@font/cabin"
-        android:text=" Moeda Digital"
+        android:text="@string/title_splash"
         android:textColor="@color/white"
         android:textSize="48dp"
         app:layout_constraintBottom_toBottomOf="parent"
