--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -9,7 +9,7 @@
     tools:context=".SplashActivity">
 
     <TextView
-        android:id="@+id/tit_moeda"
+        android:id="@+id/tit_coin"
         android:layout_width="310dp"
         android:layout_height="84dp"
         android:fontFamily="@font/cabin"
