--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/limegreen"
-    tools:context=".SplashActivity">
+    tools:context=".view.SplashActivity">
 
     <TextView
         android:id="@+id/tit_moeda"
