--- a/app/src/main/res/layout/coin_item.xml
+++ b/app/src/main/res/layout/coin_item.xml
@@ -10,9 +10,40 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/coin_image"
-            android:layout_width="130dp"
-            android:layout_height="130dp"/>
+            android:id="@+id/id_icon"
+            android:layout_width="150dp"
+            android:layout_height="150dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/txt_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:textSize="24sp"/>
+
+
+            <!--            Iniciais da criptomoeda-->
+            <TextView
+                android:id="@+id/asset_id"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:textSize="18sp"/>
+
+            <TextView
+                android:id="@+id/price_usd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="30sp"/>
+
+
+        </LinearLayout>
+
 
 
     </LinearLayout>
