--- a/app/src/main/res/layout/coin_item.xml
+++ b/app/src/main/res/layout/coin_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -11,8 +11,8 @@
 
         <ImageView
             android:id="@+id/id_icon"
-            android:layout_width="150dp"
-            android:layout_height="150dp"/>
+            android:layout_width="130dp"
+            android:layout_height="130dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -21,34 +21,30 @@
 
             <TextView
                 android:id="@+id/txt_name"
-                android:layout_width="match_parent"
+                android:layout_width="134dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
-                android:textSize="24sp"/>
+                android:textSize="18sp"
 
-
-            <!--            Iniciais da criptomoeda-->
-            <TextView
-                android:id="@+id/asset_id"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:textSize="18sp"/>
-
+                />
             <TextView
                 android:id="@+id/price_usd"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="30sp"/>
+                android:layout_marginStart="120dp"
+                android:textSize="24sp"
+                tools:text="R$30,010,20" />
 
+            <TextView
+                android:id="@+id/asset_id"
+                android:layout_width="113dp"
+                android:layout_height="27dp"
+                android:layout_margin="8dp"
+                android:layout_marginBottom="80dp"
+                android:textSize="12sp" />
 
         </LinearLayout>
 
-
-
     </LinearLayout>
-
-
-
 
 </androidx.cardview.widget.CardView>
