--- a/app/src/main/res/layout/coin_item.xml
+++ b/app/src/main/res/layout/coin_item.xml
@@ -2,7 +2,11 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    app:cardBackgroundColor="@color/darkgray"
+
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -11,40 +15,49 @@
 
         <ImageView
             android:id="@+id/id_icon"
-            android:layout_width="130dp"
-            android:layout_height="130dp"/>
+            android:layout_width="100dp"
+            android:layout_height="100dp"/>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:gravity="center|start"
+            >
 
             <TextView
                 android:id="@+id/txt_name"
-                android:layout_width="134dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:textSize="18sp"
-
+                android:textColor="@color/white"
+                tools:text="Bitcoin"
                 />
-            <TextView
-                android:id="@+id/price_usd"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="120dp"
-                android:textSize="24sp"
-                tools:text="R$30,010,20" />
 
             <TextView
                 android:id="@+id/asset_id"
-                android:layout_width="113dp"
-                android:layout_height="27dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_margin="8dp"
-                android:layout_marginBottom="80dp"
-                android:textSize="12sp" />
+                android:textSize="12sp"
+                android:textColor="@color/white"
+                tools:text="BTC"
+                />
 
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/price_usd"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textSize="24sp"
+            android:gravity="center|end"
+            android:textColor="@color/white"
+            tools:text="$30.010,20"/>
+
     </LinearLayout>
 
+
 </androidx.cardview.widget.CardView>
+
