Configuração do repository

--- a/app/src/main/res/layout/coin_item.xml
+++ b/app/src/main/res/layout/coin_item.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     app:cardBackgroundColor="@color/darkgray"
+    android:id="@+id/cardCoinView"
 
     >
 
